test/test-files/analyzer/operators/error-relational-operators-are-doubles-or-integers/exception.out
Semantic error in : ./test-files/analyzer/operators/error-relational-operators-are-doubles-or-integers/source.spice:3:12:
Wrong data type for operator: Cannot apply '>' operator on types double and string

while (variable > "test") {
       ^^^^^^^^^^^^^^^^^